BikeStationDetailActivity.kt added, intents added in BikeStationsAdapter.kt,  BikeStationDetail view implemented Timber logs added, MapsFragment.kt updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.bikestations.BikeStationDetailActivity"
+            android:label="Bike Station Detail"
+            android:launchMode="singleTop">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.main.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
